# POBR-Projekt

./: .gitignore  CMakeLists.txt  ColourSpaceReduction.cxx  DisplayImage.cxx  README.md  config.yaml
include/: Config.hxx
include/POBR/: Filters.hxx  Functors.hxx  Identification.hxx  Masks.hxx  Preprocessing.hxx  Segmentation.hxx
report/: .gitignore  Makefile  bibliography.bib  main.tex
report/figures/: bklogo.pdf_tex
report/tex/: 1-cel-projektu.tex  10-podsumowanie.tex  10-rezultaty.tex  11-podsumowanie.tex  12-zdjecia.tex  2-logo-bk.tex  3-akwizycja-obrazu.tex  3-algorytm.tex  4-algorytm.tex  4-preprocessing.tex  5-preprocessing.tex  5-przestrzenie-barw.tex  6-przestrzenie-barw.tex  6-segmentacja.tex  7-segmentacja.tex  7-wyznaczanie-cech.tex  8-identyfikacja-cech.tex  8-wyznaczanie-cech.tex  9-identyfikacja-cech.tex
src/: ColourSpaceReduction.cxx  Config.cxx  Converters.cxx  DisplayImage.cxx  HSVMask.cxx  Histogram.cxx  Reducers.cxx  Resizers.cxx  main.cxx
src/POBR/: Converters.cxx  Filters.cxx  HSVMask.cxx  Histogram.cxx  Identification.cxx  Reducers.cxx  Resizers.cxx  Segmentation.cxx
src/examples/: Filters.cxx  Resizers.cxx  Segmentation.cxx
